<resources>
    <string name="app_name">Faturas.OL</string>
    <string name="txtUsername">Username</string>
    <string name="txtPassword">Password</string>
    <string name="btnLogin">Login</string>
    <string name="btnRegistar">Registar</string>
    <string name="txtNome">Nome</string>
    <string name="txtNIF">NIF</string>
    <string name="txtTele">Telemóvel</string>
    <string name="btnRegistar2">Registar</string>
    <string name="btnVoltar">Voltar</string>
    <string name="title_activity_login">Faturas.OL</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_register">Registar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">E-Mail invalido</string>
    <string name="error_invalid_email_exists">E-Mail já em utilização</string>
    <string name="error_invalid_password">Password curta</string>
    <string name="error_incorrect_password">Password incorreta</string>
    <string name="error_invalid_username">Username inválido (Max 16 caracteres)</string>
    <string name="error_invalid_username_exists">Username já em utilização</string>
    <string name="error_invalid_nif">NIF invalido (9 caracteres)</string>
    <string name="error_invalid_nif_exists">NIF já registado</string>
    <string name="error_invalid_telemovel">Telemovel invalido (9 caracteres)</string>
    <string name="error_invalid_telemovel_exists">Telemóvel já em utilização</string>
    <string name="error_field_required">Necessario preencher este campo</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings registo user -->
    <string name="btnLoja">NaN</string>
    <string name="menu_action_setting">Setting</string>
    <string name="title_activity_user_settings">UserSettings</string>
    <string name="menu_faturas_user">As Suas Faturas</string>
    <string name="menu_sair">Sair</string>
    <string name="item_lista_lojas">item lista lojas</string>
    <string name="btn_voltar">Voltar</string>
    <string name="btn_guardarInfo">Guardar</string>
    <string name="item_fatura_user">item fatura user</string>
    <string name="hint_num_fatura">Nº Fatura</string>
    <string name="hint_nif_empresa">NIF Empresa</string>
    <string name="hint_nome_empresa">Nome Empresa</string>
    <string name="hint_morada_empresa">Morada da Empresa</string>
    <string name="hint_nif_cliente">NIF Cliente</string>
    <string name="hint_data_format">dd/MM/YY</string>
    <string name="text_fatura">NaN</string>
    <string name="text_text_fatura">NaN</string>
    <string name="registar_nome">Nome</string>
    <string name="registar_username">Username</string>
    <string name="registar_email">E-mail</string>
    <string name="registar_password">Password</string>
    <string name="registar_conf_password">Confirmar Password</string>
    <string name="registar_nif">NIF</string>
    <string name="registar_telemovel">Telemóvel (Opcional)</string>
    <string name="options_email">E-mail:</string>
    <string name="options_telemovel">Telemóvel:</string>
    <string name="options_password">Password:</string>
    <string name="options_conf_password">Confirmar Password:</string>
    <string name="title_add_fatura_custom">Fatura Customizada</string>
    <string name="hint_n_fatura_custom">N. Fatura</string>
    <string name="hint_data">Data (dd/mm/aa)</string>



</resources>
