<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="amsi.dei.estg.ipleiria.pt.faturasol.AdicionarFatura"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/title_add_fatura_custom"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="13dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/txtNFatura"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/hint_n_fatura_custom"
                android:imeOptions="actionUnspecified"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/txtNifEmpresa"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/hint_nif_empresa"
                android:imeOptions="actionUnspecified"
                android:inputType="number"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/txtNomeEmpresa"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/hint_nome_empresa"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/txtMoradaEmpresa"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="@string/hint_morada_empresa"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/txtNifCliente"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_nif_cliente"
                android:inputType="number"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/txtData"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_data"
                android:inputType="date"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingTop="8dp" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabAdicionar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:clickable="true"
        android:onClick="onClickAdicionarCustomFatura"
        app:srcCompat="@drawable/ic_action_new" />

</android.support.design.widget.CoordinatorLayout>
